<resources>
    <string name="app_name_">Android-uhome</string>
    <string name="home_network_status">Home Network Status</string>
    <string name="connected">Connected</string>
    <string name="check">Check</string>
    <string name="device_name">Device Name</string>
    <string name="device_status">Device Status</string>
    <string name="home_id">Home ID</string>
    <string name="home_name">Home Name</string>
    <string name="user_id">user_id</string>
    <string name="device_id">device_id</string>
    <string name="app_name">uHome</string>
    <string name="token">514062511683-g99h027n07ua3egp3dhnhb9pvbqrces2.apps.googleusercontent.com</string>
    <string name="baseUrl">http://ec2-18-141-56-39.ap-southeast-1.compute.amazonaws.com:3000</string>
    <string name="label_google_sign_in">Firebase + Google Sign In</string>
    <string name="desc_google_sign_in">Use a Google Sign In credential to authenticate with Firebase.</string>

    <string name="label_facebook_login">Firebase + Facebook Login</string>
    <string name="desc_facebook_login">Use a Facebook Login credential to authenticate with Firebase.</string>

    <string name="label_twitter_login">Firebase + Twitter Login</string>
    <string name="desc_twitter_login">Use a Twitter Login credential to authenticate with Firebase.</string>

    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>

    <string name="label_passwordless">Passwordless Authentication</string>
    <string name="desc_passwordless">Use only an email to authenticate with Firebase.</string>

    <string name="label_phone_auth">Phone Number Authentication</string>
    <string name="desc_phone_auth">Use a phone number to authenticate with Firebase.</string>

    <string name="label_anonymous_auth">Anonymous Authentication</string>
    <string name="desc_anonymous_auth">Sign in anonymously and then later upgrade to a full Firebase Auth user.</string>

    <string name="label_custom_auth">Custom Authentication</string>
    <string name="desc_custom_auth">Use a custom token signed by your own server to authenticate with Firebase.</string>

    <string name="label_firebase_ui">FirebaseUI Auth</string>
    <string name="desc_firebase_ui">Use the FirebaseUI-Android library to authenticate with Firebase.</string>

    <string name="label_generic_idp">Generic IDP Auth</string>
    <string name="desc_generic_idp">Use a generic identity provider, like Microsoft or Yahoo, to authenticate with Firebase.</string>

    <string name="hint_user_id">User ID</string>
    <string name="get_custom_token">Get Token</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="send_link">Send Link</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="custom_token">Custom Token</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="start_phone_auth">Start</string>
    <string name="verify_phone_auth">Verify</string>
    <string name="resend_phone_auth">Resend</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="hint_verification_code">Verification Code</string>
    <string name="status_code_sent">Code Sent</string>
    <string name="status_verification_failed">Verification failed</string>
    <string name="status_verification_succeeded">Verification succeeded</string>
    <string name="status_sign_in_failed">Sign-in failed</string>
    <string name="instant_validation">(instant validation)</string>

    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>

    <string name="google_status_fmt">Google User: %s</string>
    <string name="google_title_text">Google Sign In</string>

    <string name="facebook_status_fmt">Facebook User: %s</string>
    <string name="facebook_title_text">Facebook Login</string>

    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Email and Password</string>

    <string name="passwordless_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="passwordless_title_text">Passwordless Sign In</string>
    <string name="status_email_not_sent">Send link to your email to get started.</string>
    <string name="status_email_sent">Link sent, check your email to continue.</string>
    <string name="status_link_found">Link received, enter email to sign in.</string>

    <string name="phone_title_text">Phone Number</string>

    <string name="twitter_status_fmt">Twitter User: %s</string>
    <string name="twitter_title_text">Twitter Login</string>

    <string name="firebaseui_status_fmt">Firebase User: %s</string>
    <string name="firebaseui_title_text">FirebaseUI Auth</string>

    <string name="generic_title_text">Generic IDP Sign In\nwith Microsoft</string>
    <string name="msft_status_fmt">Microsoft User: %s</string>

    <string name="id_fmt">User ID: %s</string>
    <string name="email_fmt">Email: %s</string>

    <string name="custom_auth_signin_status_user">User ID: %s</string>
    <string name="custom_auth_signin_status_failed">Error: sign in failed</string>
    <string name="room_id">Room Id</string>
    <string name="room_name">Room Name</string>
    <string name="room_type">Room Type</string>
    <string name="fcm_token">FCM Token: %s</string>

    <string name="estimote_app_id">%s</string>
    <string name="estimote_app_token">%s</string>
    <string name="choose_your_house_to_use">Choose your house to use</string>
    <string name="choose_device_to_use">Choose device to use</string>
    <string name="choose_room_to_use">Choose room to use</string>
    <string name="uhome_application">uHome Application</string>
    <string name="change_date">Change Date</string>
    <string name="display_date">Display Date</string>
    <string name="user_name">user_name</string>
    <string name="enter_time">enter_time</string>
    <string name="member_s_location">Member\'s location</string>
    <string name="houses">Houses</string>
    <string name="rooms">Rooms</string>
    <string name="devices">Devices</string>
    <string name="records">Records</string>
    <string name="findmyfam">FindMyFam</string>
    <string name="statistics">Statistics</string>

    <string name="location_text">Location: </string>
    <string name="time_text">Time: </string>
    <string name="dashboard">Dashboard</string>
    <string name="whoshere">Whoshere</string>
    <string name="location">Location</string>
    <string name="select">Select</string>
    <string name="average_time">Average time</string>
    <string name="average">Average</string>
    <string name="back">Back</string>


</resources>
