<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/userId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_id" />

        <TextView
            android:id="@+id/userName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_name" />

        <TextView
            android:id="@+id/roomName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/room_name" />

        <TextView
            android:id="@+id/enterTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enter_time" />
    </LinearLayout>
</LinearLayout>